SM related changes - code upto v5.0.9
